# jupyterlab_poetry

./: .dockerignore  .gitignore  Dockerfile  README.md  Untitled.ipynb  docker-compose.yml  pyproject.toml  sample_jupyter.ipynb
.circleci/: config.yml
.github/workflows/: ci.yml
py_samples/: change_calc.py
samples/: fizzbuzz.ipynb
src/ml_samples/: basic_clustering.ipynb  dataset_containing_missing_values.ipynb  dr_pca_scree_plot.ipynb  dr_t_sne.ipynb  elbow_method.ipynb  hc_various_methods.ipynb  hc_word_method.ipynb  nhc_basic_clustering.ipynb  nhc_dbscan.ipynb  nhc_elbow_method.ipynb  nhc_gmm.ipynb  nhc_mean_shift.ipynb  nhc_spectral_clustering.ipynb  pca.ipynb  silhouette_analysis.ipynb
src/ml_samples/bank/: cl_classification_bank_marketing.ipynb
src/ml_samples/bike_sharing/: cl_regression_bike_sharing.ipynb  cl_time_series_analysis_bike_sharing.ipynb
src/ml_samples/bike_sharing/kaggle/: bike_sharing_v1.ipynb
src/ml_samples/house_prices/: regression.ipynb
src/ml_samples/nlp_disaster_tweets/: nlp_disaster_tweets_v0.ipynb  nlp_disaster_tweets_v1.ipynb  nlp_disaster_tweets_v2.ipynb  nlp_disaster_tweets_v3.ipynb  nlp_disaster_tweets_v4.ipynb  v1_submission.csv  v2_submission.csv  v3_submission.csv  v4_submission.csv
src/ml_samples/nlp_insincere_question_classification/: README.md  nlp_v0.ipynb  nlp_v1.ipynb
src/ml_samples/nlp_question_pairs/: README.md  nlp_question_pairs_v0.ipynb  nlp_question_pairs_v1.ipynb  nlp_question_pairs_v2.ipynb
src/ml_samples/nlp_sentiment_analysis/: README.md  nlp_sentiment_analysis_v0.ipynb  nlp_sentiment_analysis_v1.ipynb  nlp_sentiment_analysis_v2.ipynb  v0_trial_submit.csv  v1_trial_submit.csv  v2_submission.csv
src/ml_samples/nlp_sentiment_analysis_on_movie_reviews/: README.md  nlp_sentiment_analysis_on_movie_reviews_v0.ipynb  nlp_sentiment_analysis_on_movie_reviews_v1.ipynb  v0_trial_submit.csv  v1_submission.csv
src/ml_samples/online_retail/: association_analysis.ipynb
src/ml_samples/titanic/kaggle/: titanic_v0.ipynb  titanic_v1.ipynb  v1.ipynb  v1_lightgbm.csv
src/ml_samples/wholesale_customers/: clustering_and_dimension_compression.ipynb
src/ml_supervised_leaning_sample/: cl_batch_classifier_comparison.ipynb  cl_classification_prediction.ipynb  cl_eval_classifier_models.ipynb  cl_neural_network.ipynb  cp_logistic_regression.ipynb  dts_basic.ipynb  reg_multiple_regression.ipynb  reg_simple_regression.ipynb  shap_classification.ipynb  shap_regression.ipynb
src/ml_supervised_leaning_sample/models/: simple_regression.pkl
src/ml_unsupervised_learning_samples/: dr_pca_basic.ipynb  dr_pca_scree_plot.ipynb  hc_word_method.ipynb  nhc_basic_clustering.ipynb  nhc_dbscan.ipynb  nhc_elbow_method.ipynb  nhc_gmm.ipynb  nhc_mean_shift.ipynb  nhc_mini_batch_means.ipynb  nhc_spectral_clustering.ipynb  nhc_x_means.ipynb
src/py_samples/: change_calc.py  palindrome.py  prime_judge.py  prime_sympy.py
src/tools_sample/: matplotlib.ipynb  numpy.ipynb  pandas.ipynb  predict_stock_price.ipynb  predict_stock_prices.ipynb  pytorch.ipynb  sample.ipynb  sklearn.ipynb
tests/py_samples/palindrome/: test_display_palindrome_or_not.py  test_reverse_text.py
tests/py_samples/print_amount/: test_arr_coin.py
