[tool.poetry]
name = "jupyterlab_docker"
version = "0.7.0"
description = "Environment JupyterLab Poetry docker-compose"
authors = ["imaima"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"

llvmlite = "^0.43.0"
numpy = "1.25.2"
torch = "2.3.1"
torchvision = "0.18.1"
torchaudio = "2.3.1"
jupyterlab = "^4.2.4"
pandas = "^1.5"
scikit-learn = "^1.2"
pyclustering = "^0.10"
matplotlib = "^3.6"
seaborn = "^0.12"
sympy = "^1.11"
scipy = "^1.9"
pandas-datareader = "~0.10"
xgboost = "^1.7.3"
mlxtend = "^0.21.0"
shap = "^0.43.0"
ephem = "^4.1.4"
pystan = "^3.6.0"
prophet = "^1.1.2"
kaggle = "^1.5.13"
ydata-profiling = "^4.9.0"
ipywidgets = "^8.0.5"
lightgbm = "^3.3.5"
nltk = "^3.8.1"
transformers = "^4.43.3"
sentencepiece = "^0.1.99"
accelerate = "^0.33.0"
contractions = "^0.1.73"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry_core>=1.0.10"]
build-backend = "poetry.core.masonry.api"
