[tool.poetry]
name = "jupyterlab_docker"
version = "0.11.1"
description = "Environment JupyterLab Poetry docker-compose"
authors = ["imaima"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"

numpy = "2.1.3"
torch = "2.7.0"
torchvision = "^0.22"
torchaudio = "2.7.0"
jupyterlab = "^4.2.4"
pandas = "^2.2.2"
scikit-learn = "^1.5.2"
pyclustering = "^0.10"
matplotlib = "^3.6"
seaborn = "^0.12"
sympy = "^1.11"
scipy = "^1.13.1"
pandas-datareader = "~0.10"
xgboost = "^1.7.3"
mlxtend = "^0.23.1"
shap = "^0.43.0"
ephem = "^4.1.5"
pystan = "^3.10.0"
# FIXME: Using Prophet current version 1.15 causes `np.float` error. ( https://github.com/facebook/prophet/pull/2592 )
# - Due to `RuntimeError: Error during optimization`.
prophet = "^1.1.5"
kaggle = "^1.5.13"
ydata-profiling = "^4.10.0"
ipywidgets = "^8.0.5"
lightgbm = "^4.6.0"
nltk = "^3.9.1"
transformers = "^4.50.0"
sentencepiece = "^0.2.0"
accelerate = "^0.34.0"
contractions = "^0.1.73"
aiohttp = "^3.10.11"
imbalanced-learn = "^0.12.0"
openpyxl = "^3.1.3"
dask = "^2024.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry_core>=2.1.2"]
build-backend = "poetry.core.masonry.api"
